# Change Log
[Simple Movable Grid](https://www.curseforge.com/minecraft/mc-mods/simple-movable-grid).
[Source](https://github.com/Iunius118/SimpleMovableGrid).

## [Unreleased]
### Changed
- Timing of rendering grid.

## [1.19-1.1.1-Fabric]
### Changed
- Update to Minecraft 1.19.

### Fixed
- Translation of messages.

## [22w17a-1.1.0-Fabric]
### Added
- Translation keys for messages.

### Changed
- Update to Minecraft 22w17a (1.19-snapshot).

## [1.18-1.0.0-Fabric]
### Changed
- Port to 1.18.

## [1.17-1.0.0-Fabric]
### Added
- Grid renderer.
- Config with Cloth Config.
- Config screen for Mod Menu.
- Shortcut keys to change config.