@@ -19,6 +19,6 @@ public class MixinDebugRenderer {
         if (!config.enabled())
             return;
 
-        GridRenderer.render(config.getPos());
+        GridRenderer.render(config.getPos(), config.isLabelEnabled());
     }
 }
